students/Julie/stylish/css/style.css
/* ... */
@media screen and (max-width:600px) { 

    .logo {
        flex: none;
        width: 130px;
        margin: 12px auto;
        position: relative;
    }
    
    .logo > a {
        vertical-align: middle;
    }
    
    .logo img {
        width: auto; height: 25px;
        vertical-align: middle;
    }
    
    #mobileSubmit {
        width: 44px; height: 44px;
        position: absolute;
        top: 5px; right: 15px;
        background: url(../img/search.png) no-repeat;
        outline: none;
        border: none;
        opacity: 1;
        transition: opacity .3s ease;
        display: block;
        cursor: pointer;
    }
    
    .feature {
        margin: 0 auto;
        min-width: 90%;
        opacity: 0;
        transition: opacity .3s ease;
    }

    .featureGrow {
        opacity: 1;
        margin: 6px auto 14px auto;
    }

    .searchBar {
        width: 100%; height: 0;
        margin-right: 0;
        opacity: 0;
        flex-shrink: 0;
        transition: height .3s ease, opacity .3s ease;
    }

    .searchBarGrow {
        height: 40px;
        opacity: 1;
    }

    .searchBar > input {
        width: 90%;
    }

    .cart, .member {
        display: none;
    }

    .smallBar {
        display: flex;
        position: fixed;
        bottom: 0;
        width: 100%; height: 60px;
        background: #313538;
        z-index: 9;
    }
    
    .sCart, .sMember {
        margin: 0 auto;
        justify-content: center;
        align-items: center;
        display: flex;
        position: relative;
    }

    .smallBar > span {
        color: #ffffff;
        font-size: 16px;
        margin-top: 18px;
    }

    .scIcon, .smIcon {
        width: 34px; height: 34px;
        display: inline-block;
    }
    
    .scIcon {
        background: url(../img/cart-mobile.png) no-repeat;
        position: relative;
        background-position: center; 
    }

    .smIcon {
        background: url(../img/member-mobile.png) no-repeat;
        border-radius: 50%;
        background-position: center; 
    }

    .smIcon > img {
        width: 100%;
        border-radius: 50%;
    }

    .moji {
        font-size: 16px;
        color: #ffffff;
    }
    
    .carousel {
        height: 185px;
    }

    .story {
        width: 143px; height: 99px;
        font-size: 14px;
        line-height: 28px;
        left: 10%; top: 35%; 
        transform: translateX(-10%) translateY(-35%);
    }
    
    .subText {
        font-size: 10px;
    }
    
    .dotWrap {
        width: 50px; height: 7px;
        position: absolute;
        left: 50%;
        transform: translateX(-50%);
    }
    
    .dot, .activeDot {
        width: 7px; height: 7px;
    }

    main {
        max-width: 360px;
        margin: 15px auto 11px auto;
    }

    .loading {
        margin-bottom: 4px;
    }

    .nothing {
        font-size: 18px;
        margin-bottom: 4px;
    }

    .row {
        justify-content: center;
    }

    .product {
        width: 153px; 
        overflow: hidden;
        margin-bottom: 24px;
    }

    .product:nth-child(odd) {
        margin-right: 6px; 
    }

    .new {
        width: 36px; height: 36px;
        font-size: 12px;
        line-height: 36px;
    }

    .palette {
        height: 12px;
        margin: 8pt 0 10px 0;
    }
    
    .colors {
        width: 12px; height: 12px;
        margin-right: 6px;
    }

    .title, .price {
        letter-spacing: 2.4px;
        font-size: 12px;
    }
    
    .price {
        margin: 8px 0 0 0;
    }

    .ftWrap {
        margin-bottom: 60px;
    }
}

